syntax = "proto3";

package v1;

option go_package = "/consensus/ibft/proto";

import "google/protobuf/empty.proto";

service IbftOperator {
  rpc GetSnapshot(SnapshotReq) returns (Snapshot);
  rpc Status(google.protobuf.Empty) returns (IbftStatusResp);
}

message IbftStatusResp {
  string key = 1;
}

message SnapshotReq {
  bool latest = 1;
  uint64 number = 2;
}

message Snapshot {
  reserved 4;

  repeated Validator validators = 1;

  uint64 number = 2;

  string hash = 3;

  message Validator {
    string address = 1;
  }
}
